[package]
name = "rusty-p4"
version = "0.1.0"
authors = ["skye"]
edition = "2018"
build=false

[dependencies]
protobuf = "2.7.0"
grpcio = "0.4.4"
futures = "^0.1.15"
byteorder = "1.3.2"
libc = "0.2"
hex = "0.3"
tokio = { git="https://github.com/tokio-rs/tokio.git", features = ["rt-full"] }
bytes = "0.4.12"
futures03 = { package="futures-preview", version = "=0.3.0-alpha.17", features = ["async-await", "nightly", "compat"]}
hyper = { git="https://github.com/hyperium/hyper.git" }
log = "0.4"
flexi_logger = "0.13.2"
bitfield = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"