[package]
name = "rusty-p4-benchmark"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-p4 = { path="../rusty-p4" }
tokio = { version="0.2.0-alpha.2" , features = ["rt-full"] }
flexi_logger = "0.13.2"
log = "0.4"
bytes = "0.4"
async-trait = "0.1.13"

[profile.release]
debug = true