[package]
name = "rusty-p4-example"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-p4 = { path=".." }
tokio = { version="1.2", features=["full"] }
flexi_logger = "0.17.1"