[package]
name = "rusty-p4-app"
version = "0.1.0-alpha.1"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/another-s347/rusty-p4"
keywords = ["SDN", "Network", "P4"]
categories = ["Network programming"]
description = "Sample app collection for rusty-p4."

[dependencies]
bytes = "0.4.12"
futures = { package="futures-preview", version = "0.3.0-alpha.18", features = ["async-await", "nightly", "compat"]}
hyper = "0.13.0-alpha.1"
rusty-p4 = { path="../rusty-p4" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version="0.2.0-alpha.4" , features = ["rt-full"] }