[package]
name = "rusty-p4-app"
version = "0.1.0-alpha.1"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/another-s347/rusty-p4"
keywords = ["SDN", "Network", "P4"]
categories = ["Network programming"]
description = "Sample app collection for rusty-p4."

[dependencies]
rusty-p4 = { path="../rusty-p4" }
tokio = { version="0.2" , features = ["full", "time"] }
futures = { version = "0.3", features = ["async-await", "unstable"]}
flexi_logger = "0.13.2"
log = "0.4"
bytes = "0.5"
async-trait = "0.1.13"
ipip = { git="https://github.com/another-s347/ipip.git", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tuple_list = "0.1.2"