[package]
name = "rusty-p4-northbound"
version = "0.1.0-alpha.1"
authors = ["skye"]
edition = "2018"
build=false

[dependencies]
bytes = "0.4.12"
futures = { package="futures-preview", version = "0.3.0-alpha.18", features = ["async-await", "nightly", "compat"]}
hyper = { git="https://github.com/hyperium/hyper.git" }
rusty-p4 = { path="../rusty-p4" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"