[package]
name = "rusty-p4"
version = "0.1.0-alpha.2"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/another-s347/rusty-p4"
keywords = ["SDN", "Network", "P4"]
categories = ["network-programming"]
description = "A (WIP) library for writing P4 controller in Rust."

[dependencies]
prost = "0.5"
tonic = {version="0.1.0-alpha.3",features=["rustls"]}
rusty-p4-proto = {path="../../rusty-p4-proto"}
byteorder = "1.3.2"
hex = "0.3"
tokio = { version="0.2.0-alpha.6" , features = ["rt-full"] }
bytes = "0.4.12"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await", "unstable"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
nom = "5"
async-trait = "0.1.13"
petgraph = "0.4.13"
parking_lot = "0.9.0"