[package]
name = "rusty-p4"
version = "0.1.0-alpha.2"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/another-s347/rusty-p4"
keywords = ["SDN", "Network", "P4"]
categories = ["network-programming"]
description = "A (WIP) library for writing P4 controller in Rust."

[dependencies]
prost = "0.6"
tonic = {version="0.1.0"}
rusty-p4-proto = {version="0.1.0-alpha.3"}
byteorder = "1.3.2"
hex = "0.3"
tokio = { version="0.2", features = ["full"]}
bytes = "0.5"
futures = { version = "0.3", features = ["async-await", "unstable"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
nom = "5"
async-trait = "0.1.13"
petgraph = "0.4.13"
parking_lot = "0.9.0"
proc-macro-hack = "0.5"
proc-macro-nested = "0.1"
dashmap = "3.1.0"
macro-impl = { path="./macro-impl"}
ipip = { git="https://github.com/another-s347/ipip.git", features = ["serialize"] }

[workspace]
members = [
    "macro-impl",
]