[package]
name = "rusty-p4"
version = "0.1.0-alpha.2"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/another-s347/rusty-p4"
keywords = ["SDN", "Network", "P4"]
categories = ["network-programming"]
description = "A (WIP) library for writing P4 controller in Rust."

[dependencies]
prost = "0.6"
tonic = {version="0.3.1" }
rusty-p4-proto = { git="https://github.com/another-s347/rusty-p4-proto.git"}
tower = "0.3.1"
byteorder = "1.3.2"
hex = "0.3"
tokio = { version="0.2", features = ["full"]}
bytes = "0.5"
futures = { version = "0.3", features = ["async-await", "unstable"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
nom = "5"
async-trait = "0.1.13"
petgraph = "0.4.13"
parking_lot = { version="0.11.0", features=["send_guard"] }
proc-macro-hack = "0.5"
proc-macro-nested = "0.1"
dashmap = "3.1.0"
macro-impl = { path="./macro-impl"}
ipip = { git="https://github.com/another-s347/ipip.git", features = ["serialize"] }
tuple_list = "0.1.2"
crossbeam = "0.7"
downcast-rs = "1.2.0"

[workspace]
members = [
    "macro-impl",
]