[package]
name = "macro-impl"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
quote = "1.0"
proc-macro-hack = "0.5"
syn = { version = "1", features=["full","extra-traits"]}