[package]
name = "rusty-p4-core"
version = "0.1.0-alpha.2"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/another-s347/rusty-p4"
keywords = ["SDN", "Network", "P4"]
categories = ["network-programming"]
description = "A (WIP) library for writing P4 controller in Rust."

[dependencies]
prost = "0.7"
tonic = {version="0.4" }
rusty-p4-proto = { git="https://github.com/another-s347/rusty-p4-proto.git"}
tower = "0.4.5"
byteorder = "1.4.2"
tokio = { version="1.2", features = ["full"]}
tokio-stream = "0.1.3"
bytes = "1"
futures = { version = "0.3", features = ["async-await", "unstable"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1.42"
parking_lot = { version="0.11.0", features=["send_guard"] }
dashmap = "4.0.2"
ipip = { git="https://github.com/another-s347/ipip.git", features = ["serialize"] }
tuple_list = "0.1.2"
crossbeam = "0.8"
erased-serde = "0.3"
serde_json = "1.0"
smallvec = "1.6"