[package]
name = "rusty-p4-northbound"
version = "0.1.0-alpha.2"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/another-s347/rusty-p4"
keywords = ["SDN", "Network", "P4"]
categories = ["network-programming"]
description = "A (WIP) library for writing P4 controller in Rust."

[dependencies]
tokio = { version="1.2", features = ["full"]}
tokio-stream = "0.1.3"
bytes = "1"
futures = { version = "0.3", features = ["async-await", "unstable"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
anyhow = "1"
serde_json = "1.0"
warp = "0.3"
rusty-p4-core = { path="../rusty-p4-core" }